# amla_ass1

./: Makefile  README.md  pyproject.toml  requirements.txt
amla_ass1/: __init__.py  dataset.py  features.py  plots.py
amla_ass1/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: XGBOOST1.py  XGBOOST2.py  XGBOOST3.py  XGBOOST4.py  XGBOOST5.py  XGBOOST_s1.py  XGBOOST_s5.py  XGBOOST_s7.py  XGBoostModel.py  linear_poly_2.joblib  ohe.joblib  scaler.joblib
notebooks/: Baseline.ipynb  Polynomial Regression.ipynb  XGBoost_2.ipynb  XGBoost_3.ipynb  XGBoost_4.ipynb  XGBoost_6.ipynb  XGBoost_SMOTE_1.ipynb  XGBoost_SMOTE_7.ipynb  dalal_aman-24675872-Week3-XGBoost_COR_HYP.ipynb  dalal_aman-24675872-Week3-XGBoost_HYP.ipynb  dalal_aman-24675872-Week3-XGBoost_SMOTE_COR_HYP.ipynb  submission_1.csv  submission_2.csv  submission_3.csv  submission_4.csv  submission_5.csv  submission_6.csv  submission_s1.csv  submission_s5.csv  submission_s7.csv
