[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "amla_ass1"
version = "0.0.1"
description = "This project is aimed at building a model to predict which college basketball wplayer will be drafted to join the NBA league based on his statistics for the current season for an internal UTS Kaggle competition."
authors = [
  { name = "Aman S. Dalal" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.4"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["amla_ass1"]
force_sort_within_sections = true
