[tool.poetry]
name = "amla-ass1"
version = "0.1.0"
description = "This project is aimed at building a model to predict which college basketball player will be drafted to join the NBA league based on his statistics for the current season for an internal UTS Kaggle competition."
authors = ["Aman S. Dalal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
